--- a/index.html
+++ b/index.html
@@ -12,7 +12,48 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+
+        <h2>HTML</h2>
+
+        <ul>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user</li>
+          <li></li>
+        </ul>
+
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+          <li>Enter your CSS notes here</li>
+        </ul>
+      </section>
+   
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+          <li>git status: checks branch</li>
+          <li>git checkout -b [branch name] : creates new branch and names it </li>
+          <li>git clone [inser url here]: clones repo to local device</li>
+          <li>git remote -v: verifys repo in local and gives push/pull</li>
+          <li>git add [file name]: adds files to next commit stage
+            <li>git commit -m "[ info about changes]" : commits the changes and leaves message about the changes</li>
+          <li>git branch : lists the branches</li>
+          <li>git branch [branch name]:creates new branch with specifided name</li>
+          <li>git checkout: swich to a diff branch</li>
+          <li>git merge [branch]:merges specifuied branch with current</li>
+          <a href=https://education.github.com/git-cheat-sheet-education.pdf>more git codes</a>
+        </ul>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+          <li>Enter your JavaScript notes here</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
