addded CSS to project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
         <ul>
           <li>The head element contains information about the webpage</li>
           <li>The body element represents the visible content shown to the user</li>
-          <li></li>
+          <li> ul: unordered list typicaly shown as bulleted lists </li>
+          <li> li: item in list </li>
+          <li> h2:sub headings  </li>
+          <li> class: spefifies a class for an html element </li>
+          <li> id: specifies a unique id for an html element. tow elements can not share the same id </li>
+          <li>DOCTYPE: specifies the document type</li> 
+          <li>meta: metadata that cannot be expressed using style, tital, base, link, and script </li>
+          <li> link: links data like the css ex:"link rel="stylesheet" href="./assets/style.css" </li>
+          <li> style: allows you to imbed the style sheet into the html directly and work head element by head element EX: h1 style="color:red;">Prework Study Guide h1 </li>
         </ul>
 
       </section>
@@ -27,7 +35,7 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
         <ul>
-          <li>Enter your CSS notes here</li>
+          <li><a href="https://developer.mozilla.org/en-US/docs/Web/CSS">css help</a> </li>
         </ul>
       </section>
    
@@ -36,7 +44,7 @@
         <ul>
           <li>git status: checks branch</li>
           <li>git checkout -b [branch name] : creates new branch and names it </li>
-          <li>git clone [inser url here]: clones repo to local device</li>
+          <li>git clone [insert url here]: clones repo to local device</li>
           <li>git remote -v: verifys repo in local and gives push/pull</li>
           <li>git add [file name]: adds files to next commit stage
             <li>git commit -m "[ info about changes]" : commits the changes and leaves message about the changes</li>
@@ -44,7 +52,7 @@
           <li>git branch [branch name]:creates new branch with specifided name</li>
           <li>git checkout: swich to a diff branch</li>
           <li>git merge [branch]:merges specifuied branch with current</li>
-          <a href=https://education.github.com/git-cheat-sheet-education.pdf>more git codes</a>
+          <li><a href=https://education.github.com/git-cheat-sheet-education.pdf>more git codes</a></li>
         </ul>
       </section>
    
@@ -53,6 +61,7 @@
         <ul>
           <li>Enter your JavaScript notes here</li>
         </ul>
+        <link rel="stylesheet" href="./assets/style.css">
       </section>
     </main>
 
