added js and debugged

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>didnt really take any notes here</li>
         </ul>
         <link rel="stylesheet" href="./assets/style.css">
       </section>
